{
  "version": 4,
  "terraform_version": "1.3.2",
  "serial": 468,
  "lineage": "036aa37d-72ef-fd53-3563-772dd98f4984",
  "resources": [
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_one",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:security-group/sg-078b0f1d9a737f4ca",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-078b0f1d9a737f4ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "node_group_one20221019131932907200000004",
            "name_prefix": "node_group_one",
            "owner_id": "954678508118",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03c3fd5428b0a3096"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node_group_two",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:security-group/sg-0aa53d95eab56c140",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0aa53d95eab56c140",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "node_group_two20221019131933249400000005",
            "name_prefix": "node_group_two",
            "owner_id": "954678508118",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03c3fd5428b0a3096"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:security-group/sg-09f891edaea80c609",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-09f891edaea80c609",
            "ingress": [],
            "name": "DemoEKS-dev-cluster-20221019131933258300000006",
            "name_prefix": "DemoEKS-dev-cluster-",
            "owner_id": "954678508118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DemoEKS-dev-cluster"
            },
            "tags_all": {
              "Name": "DemoEKS-dev-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c3fd5428b0a3096"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:security-group/sg-0f8546a90c4225c39",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-0f8546a90c4225c39",
            "ingress": [],
            "name": "DemoEKS-dev-node-20221019131933393700000007",
            "name_prefix": "DemoEKS-dev-node-",
            "owner_id": "954678508118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "DemoEKS-dev-node",
              "kubernetes.io/cluster/DemoEKS-dev": "owned"
            },
            "tags_all": {
              "Name": "DemoEKS-dev-node",
              "kubernetes.io/cluster/DemoEKS-dev": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c3fd5428b0a3096"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2712227313",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f891edaea80c609",
            "self": false,
            "source_security_group_id": "sg-0f8546a90c4225c39",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_nodes_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-4189573811",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f891edaea80c609",
            "self": false,
            "source_security_group_id": "sg-0f8546a90c4225c39",
            "to_port": 10250,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1425990069",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-09f891edaea80c609",
            "self": false,
            "source_security_group_id": "sg-0f8546a90c4225c39",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-1771804891",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f8546a90c4225c39",
            "self": false,
            "source_security_group_id": "sg-09f891edaea80c609",
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_https",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress all HTTPS to internet",
            "from_port": 443,
            "id": "sgrule-936106922",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f8546a90c4225c39",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/TCP to internet",
            "from_port": 123,
            "id": "sgrule-3893749428",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f8546a90c4225c39",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_ntp_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Egress NTP/UDP to internet",
            "from_port": 123,
            "id": "sgrule-2525742009",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0f8546a90c4225c39",
            "self": false,
            "source_security_group_id": null,
            "to_port": 123,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-797944231",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f8546a90c4225c39",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "egress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-2716347329",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0f8546a90c4225c39",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-2109483026",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f8546a90c4225c39",
            "self": false,
            "source_security_group_id": "sg-09f891edaea80c609",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1095825712",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f8546a90c4225c39",
            "self": false,
            "source_security_group_id": "sg-09f891edaea80c609",
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-3598201744",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0f8546a90c4225c39",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1915195519",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-0f8546a90c4225c39",
            "self": true,
            "source_security_group_id": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.eks.aws_security_group.cluster",
            "module.eks_cluster.module.eks.aws_security_group.node",
            "module.eks_cluster.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ecd412b484a3e6d",
            "domain": "vpc",
            "id": "eipalloc-02ecd412b484a3e6d",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-109-190-237.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.190.237",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "DemoEKS-dev-ap-south-1a"
            },
            "tags_all": {
              "Name": "DemoEKS-dev-ap-south-1a"
            },
            "vpc": true
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:internet-gateway/igw-039f56b1f3a9dc421",
            "id": "igw-039f56b1f3a9dc421",
            "owner_id": "954678508118",
            "tags": {
              "Name": "DemoEKS-dev"
            },
            "tags_all": {
              "Name": "DemoEKS-dev"
            },
            "vpc_id": "vpc-03c3fd5428b0a3096"
          },
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02ecd412b484a3e6d",
            "connectivity_type": "public",
            "id": "nat-08e1874deb5128d1d",
            "network_interface_id": "eni-0983eb9344a29d796",
            "private_ip": "10.0.4.244",
            "public_ip": "3.109.190.237",
            "subnet_id": "subnet-026222454f9dad6ea",
            "tags": {
              "Name": "DemoEKS-dev-ap-south-1a"
            },
            "tags_all": {
              "Name": "DemoEKS-dev-ap-south-1a"
            }
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_eip.nat",
            "module.eks_cluster.module.vpc.aws_internet_gateway.this",
            "module.eks_cluster.module.vpc.aws_subnet.public",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-090d47f23f32ed61d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08e1874deb5128d1d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-090d47f23f32ed61d",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_eip.nat",
            "module.eks_cluster.module.vpc.aws_internet_gateway.this",
            "module.eks_cluster.module.vpc.aws_nat_gateway.this",
            "module.eks_cluster.module.vpc.aws_route_table.private",
            "module.eks_cluster.module.vpc.aws_subnet.public",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-039f56b1f3a9dc421",
            "id": "r-rtb-0d530689cb4457f8b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0d530689cb4457f8b",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_internet_gateway.this",
            "module.eks_cluster.module.vpc.aws_route_table.public",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:route-table/rtb-090d47f23f32ed61d",
            "id": "rtb-090d47f23f32ed61d",
            "owner_id": "954678508118",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "DemoEKS-dev-private"
            },
            "tags_all": {
              "Name": "DemoEKS-dev-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c3fd5428b0a3096"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:route-table/rtb-0d530689cb4457f8b",
            "id": "rtb-0d530689cb4457f8b",
            "owner_id": "954678508118",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "DemoEKS-dev-public"
            },
            "tags_all": {
              "Name": "DemoEKS-dev-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c3fd5428b0a3096"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049a8aa3dba9cb6c8",
            "route_table_id": "rtb-090d47f23f32ed61d",
            "subnet_id": "subnet-090fb0911ff059b86"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_route_table.private",
            "module.eks_cluster.module.vpc.aws_subnet.private",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-087e1ee1336c01449",
            "route_table_id": "rtb-090d47f23f32ed61d",
            "subnet_id": "subnet-09c8c359160d51604"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_route_table.private",
            "module.eks_cluster.module.vpc.aws_subnet.private",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08bf1275c7086a7c6",
            "route_table_id": "rtb-090d47f23f32ed61d",
            "subnet_id": "subnet-0444777cd0eda2649"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_route_table.private",
            "module.eks_cluster.module.vpc.aws_subnet.private",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0024b837d7bdfca42",
            "route_table_id": "rtb-0d530689cb4457f8b",
            "subnet_id": "subnet-026222454f9dad6ea"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_route_table.public",
            "module.eks_cluster.module.vpc.aws_subnet.public",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060e5b258ab87d200",
            "route_table_id": "rtb-0d530689cb4457f8b",
            "subnet_id": "subnet-06ee2c11d579d365f"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_route_table.public",
            "module.eks_cluster.module.vpc.aws_subnet.public",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0dcc1f21278b23820",
            "route_table_id": "rtb-0d530689cb4457f8b",
            "subnet_id": "subnet-0e801ed7d8252f746"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_route_table.public",
            "module.eks_cluster.module.vpc.aws_subnet.public",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:subnet/subnet-090fb0911ff059b86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090fb0911ff059b86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954678508118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DemoEKS-dev-private-ap-south-1a",
              "kubernetes.io/cluster/DemoEKS-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "DemoEKS-dev-private-ap-south-1a",
              "kubernetes.io/cluster/DemoEKS-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03c3fd5428b0a3096"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:subnet/subnet-09c8c359160d51604",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c8c359160d51604",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954678508118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DemoEKS-dev-private-ap-south-1b",
              "kubernetes.io/cluster/DemoEKS-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "DemoEKS-dev-private-ap-south-1b",
              "kubernetes.io/cluster/DemoEKS-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03c3fd5428b0a3096"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:subnet/subnet-0444777cd0eda2649",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0444777cd0eda2649",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "954678508118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DemoEKS-dev-private-ap-south-1c",
              "kubernetes.io/cluster/DemoEKS-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "DemoEKS-dev-private-ap-south-1c",
              "kubernetes.io/cluster/DemoEKS-dev": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-03c3fd5428b0a3096"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:subnet/subnet-026222454f9dad6ea",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-026222454f9dad6ea",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "954678508118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DemoEKS-dev-public-ap-south-1a",
              "kubernetes.io/cluster/DemoEKS-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "DemoEKS-dev-public-ap-south-1a",
              "kubernetes.io/cluster/DemoEKS-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03c3fd5428b0a3096"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:subnet/subnet-06ee2c11d579d365f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ee2c11d579d365f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "954678508118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DemoEKS-dev-public-ap-south-1b",
              "kubernetes.io/cluster/DemoEKS-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "DemoEKS-dev-public-ap-south-1b",
              "kubernetes.io/cluster/DemoEKS-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03c3fd5428b0a3096"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:subnet/subnet-0e801ed7d8252f746",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1c",
            "availability_zone_id": "aps1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e801ed7d8252f746",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "954678508118",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "DemoEKS-dev-public-ap-south-1c",
              "kubernetes.io/cluster/DemoEKS-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "DemoEKS-dev-public-ap-south-1c",
              "kubernetes.io/cluster/DemoEKS-dev": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-03c3fd5428b0a3096"
          },
          "dependencies": [
            "module.eks_cluster.data.aws_availability_zones.available",
            "module.eks_cluster.module.vpc.aws_vpc.this",
            "module.eks_cluster.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.eks_cluster.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "module.eks_cluster.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:954678508118:vpc/vpc-03c3fd5428b0a3096",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-04b5444987f79268d",
            "default_route_table_id": "rtb-00edf4925bc4fa241",
            "default_security_group_id": "sg-0c6efeb8d2ea675dd",
            "dhcp_options_id": "dopt-a564b9ce",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-03c3fd5428b0a3096",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-00edf4925bc4fa241",
            "owner_id": "954678508118",
            "tags": {
              "Name": "DemoEKS-dev"
            },
            "tags_all": {
              "Name": "DemoEKS-dev"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}